--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -1,9 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>Jasmine Spec Runner</title>
 
-		<link rel="stylesheet" href="../node_modules/jasmine-core/lib/jasmine-core/jasmine.css">
+		<link
+			rel="stylesheet"
+			href="../node_modules/jasmine-core/lib/jasmine-core/jasmine.css"
+		/>
 		<script src="../node_modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
 		<script src="../node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
 		<script src="../node_modules/jasmine-core/lib/jasmine-core/boot.js"></script>
@@ -13,11 +16,10 @@
 
 		<script>
 			// Bootstrap app data
-			window.app = {};
+			window.app = {}
 		</script>
 
 		<script src="../js/controller.js"></script>
 	</head>
-	<body>
-	</body>
+	<body></body>
 </html>
