fixed id in html + replace foor loops with filter + add 1st test

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 			<input class="new-todo" placeholder="What needs to be done?" autofocus>
 		</header>
 		<section class="main">
-			<input class="toggle-all" type="checkbox">
+			<input id='toggle-all' class="toggle-all" type="checkbox">
+			<!-- add id to the input to make it work  -->
 			<label for="toggle-all">Mark all as complete</label>
 			<ul class="todo-list"></ul>
 		</section>
